--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.header {
+.Left-sidebar, .main, .header {
   margin-bottom: 80px;
 }
 
@@ -11,7 +11,6 @@
   background-color: #191919;
 }
 .navbar-inverse .navbar-nav > li > a {
-  border-radius: 4px;
   -webkit-transition: background-color 0.5s;
   -o-transition: background-color 0.5s;
   transition: background-color 0.5s;
@@ -26,12 +25,36 @@
   background-color: #517ba2;
 }
 
-.navbar-left > li {
-  margin: 5px 5px 5px 0;
+.navbar-header {
+  text-align: center;
 }
 
-.navbar-right > li {
-  margin: 5px 0 5px 5px;
+.navbar-toggle {
+  float: none;
+  margin-right: 0;
+}
+
+.panel-info {
+  border: none;
+  background-color: #ededed;
+  margin-bottom: 30px;
+}
+
+.panel-body {
+  padding: 15px;
+}
+
+.panel-info > .panel-heading {
+  color: #ffffff;
+  background-color: #df8a13;
+  border: none;
+  font-size: 1.25rem;
+  letter-spacing: 0.08em;
+}
+
+.panel-body {
+  border: 1px solid #dddddd;
+  border-radius: 0 0 4px 4px;
 }
 
 html {
@@ -50,6 +73,12 @@ a {
 a:hover, a:focus {
   text-decoration: none;
   color: #df8a13;
+}
+
+h1 {
+  margin: -9.99999999px 0 1em 0;
+  font-size: 3rem;
+  font-family: "PT Serif", serif;
 }
 
 .header-logo {
@@ -71,6 +100,18 @@ a:hover, a:focus {
   font-size: 1.15rem;
   letter-spacing: 0.2em;
 }
+
+.panel:last-of-type {
+  margin-bottom: 0;
+}
+
+.vertical-slider {
+  border-radius: 4px;
+  overflow: hidden;
+}
+.vertical-slider img {
+  width: 100%;
+}
 @media (min-width: 576px) {
   .header-logo__title {
     font-size: 3.5rem;
@@ -78,8 +119,32 @@ a:hover, a:focus {
     letter-spacing: 0.33em;
   }
 }
+@media (min-width: 768px) {
+  .navbar-inverse .navbar-nav > li > a {
+    border-radius: 4px;
+  }
+  .navbar-left > li {
+    margin: 5px 5px 5px 0;
+  }
+  .navbar-right > li {
+    margin: 5px 0 5px 5px;
+  }
+}
+@media (max-width: 767.8px) {
+  .navbar-inverse .navbar-nav > li > a {
+    text-align: center;
+  }
+  .navbar-left {
+    margin-bottom: 0;
+  }
+  .navbar-right {
+    margin-top: 0;
+  }
+}
 @media (max-width: 575.8px) {
   .header-logo__title {
     font-size: 2.5rem;
+    margin-right: -0.33em;
+    letter-spacing: 0.33em;
   }
 }
