--- a/assets/scss/_bootstrap-theming.scss
+++ b/assets/scss/_bootstrap-theming.scss
@@ -1,11 +1,18 @@
 .navbar-inverse {
   margin-bottom: 0;
+
   background-color: darken($color-dark, 4%);
 
   .navbar-nav {
     > li > a {
-      border-radius: 4px;
       transition: background-color 0.5s;
+
+      @include sm-min {
+        border-radius: 4px;
+      }
+      @include sm {
+        text-align: center;
+      }
 
       &:focus,
       &:hover {
@@ -24,9 +31,59 @@
   }
 }
 
-.navbar-left > li {
-  margin: 5px 5px 5px 0;
+.navbar-left {
+  @include sm-min {
+    > li {
+      margin: 5px 5px 5px 0;
+    }
+  }
+  @include sm {
+    margin-bottom: 0;
+  }
 }
-.navbar-right > li {
-  margin: 5px 0 5px 5px;
+.navbar-right {
+  @include sm-min {
+    > li {
+      margin: 5px 0 5px 5px;
+    }
+  }
+  @include sm {
+    margin-top: 0;
+  }
+}
+
+.navbar-header {
+  text-align: center;
+}
+
+.navbar-toggle {
+  float: none;
+
+  margin-right: 0;
+}
+
+.panel-info {
+  margin-bottom: $gap * 2;
+
+  border: none;
+  background-color: darken($color-light, 7%);
+}
+
+.panel-body {
+  padding: 15px;
+}
+
+.panel-info > .panel-heading {
+  letter-spacing: 0.08em;
+
+  color: $color-light;
+  border: none;
+  background-color: $color-accent;
+
+  font-size: 1.25rem;
+}
+
+.panel-body {
+  border: 1px solid $color-gray;
+  border-radius: 0 0 4px 4px;
 }
