--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,6 +1,7 @@
 html {
-  font-size: $font-size;
   overflow-y: scroll;
+
+  font-size: $font-size;
 }
 
 body {
@@ -13,6 +14,14 @@ a {
   &:hover,
   &:focus {
     text-decoration: none;
+
     color: $color-accent;
   }
+}
+
+h1 {
+  margin: -9.99999999px 0 1em 0;
+
+  font-family: $font-header;
+  font-size: 3rem;
 }
