--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -4,7 +4,9 @@
 
 .header-logo {
   padding: 100px 0;
+
   text-align: center;
+
   background-color: $color-dark;
   background-image: url(../img/header-bg.jpg);
   background-position: center;
@@ -12,26 +14,37 @@
 
   &__title {
     display: block;
+
     color: $color-accent;
+
     font-family: $font-header;
+
     @extend %text-shadow;
-
     @include xs-min {
-      font-size: 3.5rem;
       margin-right: -0.33em;
-      letter-spacing: 0.33em;
-    }
 
+      letter-spacing: 0.33em;
+
+      font-size: 3.5rem;
+    }
     @include xs {
+      margin-right: -0.33em;
+
+      letter-spacing: 0.33em;
+
       font-size: 2.5rem;
     }
   }
 
   &__description {
     display: block;
-    color: $color-light;
-    @extend %text-shadow;
-    font-size: 1.15rem;
+
     letter-spacing: 0.2em;
+
+    color: $color-light;
+
+    font-size: 1.15rem;
+
+    @extend %text-shadow;
   }
 }
