--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -1,14 +1,138 @@
 .Left-sidebar {
   @extend %margin-bottom-lg;
+
+  .panel:last-of-type {
+    margin-bottom: 0;
+  }
 }
-.panel:last-of-type {
-  margin-bottom: 0;
-}
+
 .vertical-slider {
   overflow: hidden;
 
   border-radius: 4px;
   img {
     width: 100%;
+  }
+}
+
+.user-login {
+  position: relative;
+  &__tabs {
+    position: absolute;
+    top: 0;
+    right: $gap / 3 * 2;
+
+    border: none;
+    a {
+      padding: 14px 5px 11px !important;
+
+      color: $color-gray;
+      border: none !important;
+      background-color: transparent !important;
+    }
+    .active a {
+      color: $color-light !important ;
+    }
+  }
+}
+
+$image-size: 75px;
+$image-size-width-padding: $image-size + 10;
+
+.site-news-item {
+  position: relative;
+
+  clear: both;
+
+  &:not(:last-of-type) {
+    min-height: $image-size-width-padding;
+    margin-bottom: $gap;
+
+    &::after {
+      position: absolute;
+      right: 0;
+      bottom: -4px;
+
+      width: calc(100% - #{$image-size-width-padding});
+      height: 1px;
+
+      content: "";
+
+      background-color: $color-gray;
+    }
+  }
+
+  &__image {
+    float: left;
+
+    width: $image-size;
+    margin: 0 ($gap / 3 * 2) ($gap / 3 * 2) 0;
+    img {
+      width: 100%;
+    }
+  }
+
+  &__title {
+    margin-bottom: ($gap / 3 * 2);
+    a {
+      @include block-shortener(1rem, 1.5, 50px, 2);
+    }
+  }
+
+  &__date {
+    text-align: right;
+
+    color: #6f6f6f;
+
+    font-size: 0.8rem;
+  }
+}
+
+.top-films {
+  &__body {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  &__list {
+    margin-bottom: 0;
+  }
+
+  &__item {
+    margin-right: -1;
+    margin-left: -1;
+    padding-right: 55px;
+
+    color: $color-primary !important;
+    background-color: transparent;
+
+    &:first-child {
+      border-top: none;
+      border-radius: 0;
+    }
+
+    &:last-child {
+      border-bottom: none;
+      border-radius: 0;
+    }
+
+    &:hover,
+    &:focus {
+      color: $color-light !important;
+      border-color: $color-accent;
+      background-color: $color-accent !important;
+
+      .badge {
+        background-color: $color-dark;
+      }
+    }
+  }
+
+  &__badge {
+    position: absolute;
+    top: 50%;
+    right: $gap;
+
+    transform: translateY(-50%);
   }
 }
