--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,7 +1,13 @@
 html {
-  overflow-y: scroll;
-
   font-size: $font-size;
+}
+
+.modal-scrollbar-measure {
+  position: absolute;
+  top: -9999px;
+  width: 50px;
+  height: 50px;
+  overflow: scroll;
 }
 
 body {
@@ -24,4 +30,40 @@ h1 {
 
   font-family: $font-header;
   font-size: 3rem;
+}
+
+h1::after {
+  position: absolute;
+  width: 100%;
+  margin: 0.85em 0 0 15px;
+  content: "";
+  border-bottom: 3px solid #f0ad4f;
+}
+
+h2 {
+  font-family: $font-header;
+  margin: 60px 0 45px 45px;
+  font-size: 2.5rem;
+}
+
+h2::before {
+  position: absolute;
+  left: 0;
+
+  width: 30px;
+  margin: 0.25em 0 0 0;
+
+  content: "";
+
+  border-bottom: 3px solid #f0ad4f;
+}
+h2::after {
+  position: absolute;
+
+  width: 100%;
+  margin: 0.85em 0 0 15px;
+
+  content: "";
+
+  border-bottom: 3px solid #f0ad4f;
 }
