--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,3 +1,100 @@
 .main {
   @extend %margin-bottom-lg;
+
+  .site-serch {
+    margin-bottom: $gap * 3;
+  }
+
+  .user-login {
+    margin-bottom: $gap * 4;
+  }
 }
+
+.new-films,
+.top-week {
+  &-row {
+    margin-left: -$gap / 2;
+    margin-right: -$gap / 2;
+    margin-bottom: -$gap;
+  }
+
+  &-item {
+    padding-left: $gap / 2;
+    padding-right: $gap / 2;
+    margin-bottom: $gap;
+
+    &__thumbnail {
+      margin-bottom: 0;
+    }
+
+    &__title {
+      @include text-shortener;
+      font-size: 1rem;
+      font-weight: bold;
+      margin: 0;
+    }
+
+    &__caption,
+    .top-week-item__caption {
+      text-align: center;
+    }
+
+    &__image {
+      width: 100%;
+    }
+
+    &:hover {
+      .thumbnail {
+        border-color: #df8a13;
+        background-color: #df8a13;
+      }
+      h3 {
+        color: #ffffff;
+      }
+    }
+  }
+}
+
+.thumbnail {
+  -webkit-transition: background-color 0.25s;
+  -o-transition: background-color 0.25s;
+  transition: background-color 0.25s;
+}
+
+// .film-news-item .thumbnail {
+//   margin-bottom: 0;
+
+//   -webkit-transition: background-color 0.25s;
+//   -o-transition: background-color 0.25s;
+//   transition: background-color 0.25s;
+// }
+// .film-news-item__image {
+//   width: 100%;
+// }
+// .film-news-item__text {
+//   text-align: justify;
+// }
+// .film-news-item__button {
+//   float: right;
+
+//   margin-bottom: 30px;
+
+//   -webkit-transition: background-color 0.25s;
+//   -o-transition: background-color 0.25s;
+//   transition: background-color 0.25s;
+// }
+// .film-news-item:hover .thumbnail {
+//   border-color: #df8a13;
+//   background-color: #df8a13;
+// }
+// .film-news-item:hover h3 > a {
+//   color: #df8a13;
+// }
+// .film-news-item:hover .btn-warning {
+//   background-color: #df8a13;
+// }
+// .film-news-item h3 > a {
+//   -webkit-transition: color 0.25s;
+//   -o-transition: color 0.25s;
+//   transition: color 0.25s;
+// }
