--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,6 +203,30 @@ h2::after {
   transition: background-color 0.25s;
 }
 
+.film-news-item {
+  margin-bottom: 0;
+}
+.film-news-item__image {
+  width: 100%;
+}
+.film-news-item__text {
+  text-align: justify;
+}
+.film-news-item__button {
+  float: right;
+  margin-bottom: 30px;
+}
+.film-news-item:hover .thumbnail {
+  border-color: #df8a13;
+  background-color: #df8a13;
+}
+.film-news-item:hover h3 > a {
+  color: #df8a13;
+}
+.film-news-item:hover .btn-warning {
+  background-color: #df8a13;
+}
+
 .Left-sidebar .panel:last-of-type {
   margin-bottom: 0;
 }
