--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -77,3 +77,46 @@ h2::after {
 
   border-bottom: 3px solid #f0ad4f;
 }
+h3 {
+  @include xs-min {
+    font-size: 1.5rem;
+  }
+  @include xs {
+    font-size: 1.25rem;
+  }
+}
+
+h1 {
+  @include xs {
+    margin: 0 0 1em;
+
+    font-size: 2rem;
+  }
+}
+
+h2 {
+  @include xs {
+    margin: 45px 0 30px 45px;
+
+    font-size: 1.75rem;
+  }
+}
+
+// @media xs-min {
+//   h1 {
+//     margin: -9.99999999px 0 1em 0;
+
+//     font-size: 3rem;
+//   }
+//   h2 {
+//     margin: 60px 0 45px 45px;
+
+//     font-size: 2.5rem;
+//   }
+//   h3 {
+//     font-size: 1.5rem;
+//   }
+//   .header-logo__title {
+//     font-size: 3.5rem;
+//   }
+// }
