--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,6 +240,45 @@ h2::after {
   transition: color 0.25s;
 }
 
+.film-info {
+  font-size: 1.2em;
+}
+
+.film-info__wrapper {
+  white-space: nowrap;
+}
+
+.film-info__wrapper:not(:last-of-type) {
+  margin-right: 15px;
+}
+
+.film-info__badge {
+  font-size: 0.8em;
+}
+
+.film-info__well {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.film-comment-form__button {
+  float: right;
+}
+
+.film-comment-form {
+  margin-top: -30px;
+}
+
+.panel_panel-info {
+  margin-bottom: 0;
+}
+
+.left-sidebar,
+.main,
+.header {
+  margin-bottom: 80px;
+}
+
 .Left-sidebar .panel:last-of-type {
   margin-bottom: 0;
 }
@@ -408,9 +447,6 @@ h2::after {
   }
 }
 @media (max-width: 575.8px) {
-  h3 {
-    font-size: 1.25rem;
-  }
   h1 {
     margin: 0 0 1em;
     font-size: 2rem;
@@ -418,6 +454,9 @@ h2::after {
   h2 {
     margin: 45px 0 30px 45px;
     font-size: 1.75rem;
+  }
+  h3 {
+    font-size: 1.25rem;
   }
   .header-logo__title {
     margin-right: -0.33em;
