--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -20,7 +20,7 @@
   &__tabs {
     position: absolute;
     top: 0;
-    right: $gap / 3 * 2;
+    right: ($gap / 3 * 2);
 
     border: none;
     a {
